# PolicyPal

./: .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
frontend/: package-lock.json
migrations/: env.py
migrations/versions/: 20260630_2344-4875ce290d0d_create_chunks_table.py  20260703_1721-c0fd2506b939_create_column_chunk_id_in_chunks_table.py  20260703_1745-2a96871b8cf3_widen_chunk_id_column_to_255.py
src/core/: db.py  device.py  embedding.py  exceptions.py  logging.py  reranker.py
src/ingestion/: chunk.py  clean.py  constants.py  download.py  embed.py  pipeline.py
src/models/: chunk.py
src/policypal/: config.py
src/services/: generation.py  retrieval.py
