[project]
name = "policypal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-text-splitters>=1.1.2",
    "pgvector>=0.4.2",
    "pydantic-settings>=2.14.2",
    "sentence-transformers>=5.6.0",
    "sqlalchemy>=2.0.51",
    "tiktoken>=0.13.0",
    "tqdm>=4.68.3",
    "wikipedia-api>=0.15.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["utils"]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
]
